webadmin: fix ui exception
- Fixed exception caused by iframe handler.
- Reduced white space around iframes.
- Reduced white space around main grids.
- Reduced white space around detail views.

Bug-Url: https://bugzilla.redhat.com/1478020

--- a/packaging/branding/ovirt.brand/common.css
+++ b/packaging/branding/ovirt.brand/common.css
@@ -53,8 +53,8 @@
 }
 
 .obrand_main_tab {
-    height: calc(100vh - 96px);
-    min-height: calc(100vh - 96px);
+    height: calc(100vh - 66px);
+    min-height: calc(100vh - 66px);
 }
 
 .obrand_aboutBackgroundImage {
